[package]
name = "editor-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net","rt-multi-thread"] }
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dev]
debug = false

[profile.release]
panic = "abort"
strip = true
lto = true
